# NavigatorNet

./: .gitignore  README.md  init.html
.git_broken/: COMMIT_EDITMSG  FETCH_HEAD  config
.git_broken/info/: refs
.git_broken/logs/: HEAD
.git_broken/refs/: stash
docummentation/: camera_distortion.md
foxglove/templates/: navigator.json
navnet_ws/: estrutura.txt  run_node.sh  test_weights.py
navnet_ws/.devcontainer/: Dockerfile  devcontainer.json
navnet_ws/rosbag2_2026_03_24-16_22_07/: metadata.yaml
navnet_ws/rosbag2_2026_03_24-16_27_27/: metadata.yaml
navnet_ws/rosbag2_2026_03_25-15_58_03/: metadata.yaml
navnet_ws/rosbag2_2026_04_20-17_14_28/: metadata.yaml
navnet_ws/rosbag2_2026_04_20-17_18_21/: metadata.yaml
navnet_ws/rosbag2_2026_04_20-19_58_36/: metadata.yaml
navnet_ws/rosbag2_2026_04_20-20_52_23/: metadata.yaml
navnet_ws/rosbag2_2026_04_20-20_57_16/: metadata.yaml
navnet_ws/rosbag2_2026_04_20-21_10_30/: metadata.yaml
navnet_ws/rosbag2_2026_04_23-17_16_40/: metadata.yaml
ros2_ws/.devcontainer/: Dockerfile  devcontainer.json
ros2_ws/src/vbn_ros_msgs/: package.xml
ros2_ws/src/vbn_ros_msgs/msg/: GPS2Raw.msg  GPSRawInt.msg  GlobalPositionInt.msg  ScaledIMU.msg  TileCoordinatesList.msg  VisionNavigationEstimation.msg
scripts/: 4k.py  analyze_bag.py  arrow_keys.py  camera.py  download_tiles.py  kpi.py  mapas.py  offline_map_feature_extrator.py  ppm.py  swarm_bag_maker.py  xbox_controller_input.py
scripts/navnet_results/: kpi_summary.txt
scripts/navnet_results_2/: kpi_summary.txt
scripts/navnet_results_200/: kpi_summary.txt
(+410 files in other folders)
